--- a/p/themes/Swage/swage.scss
+++ b/p/themes/Swage/swage.scss
@@ -1315,6 +1315,7 @@ a.signin {
 
 	&.log-debug {
 		background: var(--color-background-dark);
+		color: var(--color-text-light);
 	}
 }
 
